add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_fancy_library)

add_executable(tests tests.cpp)
#Hier sind die Lösungen der restlichen Aufgaben 

add_executable(mileToKilometer mileToKilometer.cpp)
#Programm "mileToKilometer"

add_executable (aufgabe1-3 aufgabe1-3.cpp)
#Das ist mein erstes C++ Programm


